--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -188,3 +188,29 @@ input {
     }
   }
 }
+
+/* microposts*/
+.microposts{
+  list-style: none;
+  margin: 10px 0 0 0 ;
+  li{
+    padding:10px 0;
+    border-top: 1px solid #e8e8e8;
+  }
+}
+.content{
+  display: black;
+}
+.timestamp{
+  color: $grayLight;
+}
+.gravatar{
+  floot:left;
+  margin-right: 10px;
+}
+aside{
+  textarea{
+    height:100px;
+    margin-bottom: 5px;
+  }
+}
